--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "jlapp/swaggervel",
+    "name": "smartbackend/swaggervel",
     "description": "A great way to integrate Swagger into Laravel",
-    "keywords": ["laravel", "swagger", "l4", "l5", "documentation", "api"],
+    "keywords": ["api"],
     "version": "5.0.0",
     "license": "MIT",
     "authors": [
